# fight-intelligence

./: .gitignore  README.md  main.py  pyproject.toml
classification/: heuristics.py
config/: heuristics_v1.yaml
eval/: .gitkeep
events/: builder.py  schema.py
vision/: pose.py  reid.py  tracker.py
